@@ -14,4 +14,5 @@ colourmaptest
 regiontest
 mac
 filetransfer
-
+backchannel
+rotate
