@@ -18,5 +18,5 @@ noinst_HEADERS=radon.h
 
 noinst_PROGRAMS=example pnmshow regiontest pnmshow24 fontsel \
 	vncev storepasswd colourmaptest simple simple15 $(MAC) \
-	$(FILETRANSFER) backchannel $(BLOOPTEST) camera
+	$(FILETRANSFER) backchannel $(BLOOPTEST) camera rotate
 
